Title, h1 and Paragraph added

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Wild code School</title>
   </head>
   <body>
-  
+    <h1>Wild Code School</h1>
+    <p>The ontent has been added</p>
   </body>
 </html>
